--- a/ecommerce-backend/package.json
+++ b/ecommerce-backend/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "start": "node src/app.js",
         "dev": "nodemon src/app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest --coverage",
+        "migrate": "node src/config/migrate.js",
+        "init-es": "node src/scripts/init-elasticsearch.js",
+        "reindex": "node -e \"require('./src/services/elasticsearch/sync.service').syncAllProducts().then(() => process.exit(0))\""
     },
     "keywords": [],
     "author": "",
@@ -16,9 +19,12 @@
     },
     "type": "commonjs",
     "dependencies": {
+        "@elastic/elasticsearch": "^9.2.0",
         "bcryptjs": "^3.0.3",
+        "cloudinary": "^2.8.0",
+        "compromise": "^14.14.5",
         "cors": "^2.8.5",
-        "crypto": "^1.0.1",
+        "csv-writer": "^1.6.0",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
         "express-validator": "^7.3.1",
@@ -28,12 +34,16 @@
         "joi": "^18.0.2",
         "jsonwebtoken": "^9.0.3",
         "morgan": "^1.10.1",
-        "nodemailer": "^7.0.11",
+        "multer": "^2.0.2",
+        "natural": "^8.1.0",
+        "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.12",
         "pg": "^8.16.3",
         "pg-hstore": "^2.3.4",
-        "razorpay": "^2.9.6",
         "sequelize": "^6.37.7",
-        "winston": "^3.19.0"
+        "sharp": "^0.34.5",
+        "winston": "^3.19.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@types/node": "^25.0.3",
